--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: COOKIE_SAME_SITE
         value: none
       - key: PUBLIC_URL
-        value: https://allfixedpanel.onrender.com/
+        value: https://dexxterpanel.onrender.com/
     disk:
       name: data-dir
       mountPath: /opt/render/project/src/data
